for the redirect

--- a/_theme_files/create-job.html
+++ b/_theme_files/create-job.html
@@ -191,9 +191,7 @@
                     </div>
 
                     <div class="mb-4">
-                        <label class="block text-gray-700" for="job_type"
-                            >Job Type</label
-                        >
+                        <label class="block text-gray-700" for="job_type">Job Type</label>
                         <select
                             id="job_type"
                             name="job_type"
